Fix exporting something imported in another block
Closes GH-1.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "esnext": false,
     "rules": {
       "guard-for-in": "off",
+      "unicorn/explicit-length-check": "off",
       "unicorn/prefer-includes": "off"
     }
   },
