--- a/package.json
+++ b/package.json
@@ -27,35 +27,35 @@
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
+  "sideEffects": false,
+  "type": "module",
+  "main": "index.js",
   "files": [
+    "lib/",
     "index.js"
   ],
   "dependencies": {
-    "micromark": "~2.11.0",
-    "micromark-extension-mdx-expression": "^0.3.0",
-    "vfile-message": "^2.0.0"
+    "micromark": "^3.0.0-alpha.2",
+    "micromark-core-commonmark": "^1.0.0-alpha.2",
+    "micromark-util-character": "^1.0.0-alpha.2",
+    "micromark-util-events-to-acorn": "^1.0.0-alpha.1",
+    "vfile-message": "^3.0.0"
   },
   "devDependencies": {
     "acorn": "^8.0.0",
     "acorn-jsx": "^5.0.0",
-    "nyc": "^15.0.0",
+    "c8": "^7.0.0",
     "prettier": "^2.0.0",
     "remark-cli": "^9.0.0",
     "remark-preset-wooorm": "^8.0.0",
     "tape": "^5.0.0",
-    "xo": "^0.38.0"
+    "xo": "^0.39.0"
   },
   "scripts": {
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
-    "test-api": "node test",
-    "test-coverage": "nyc --reporter lcov tape test.js",
+    "test-api": "node --conditions development test/index.js",
+    "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node --conditions development test/index.js",
     "test": "npm run format && npm run test-coverage"
-  },
-  "nyc": {
-    "check-coverage": true,
-    "lines": 100,
-    "functions": 100,
-    "branches": 100
   },
   "prettier": {
     "tabWidth": 2,
@@ -67,8 +67,9 @@
   },
   "xo": {
     "prettier": true,
-    "esnext": false,
     "rules": {
+      "no-var": "off",
+      "prefer-arrow-callback": "off",
       "guard-for-in": "off",
       "unicorn/explicit-length-check": "off",
       "unicorn/no-this-assignment": "off",
