--- a/package.json
+++ b/package.json
@@ -68,12 +68,7 @@
   "xo": {
     "prettier": true,
     "rules": {
-      "no-var": "off",
-      "prefer-arrow-callback": "off",
-      "guard-for-in": "off",
-      "unicorn/explicit-length-check": "off",
-      "unicorn/no-this-assignment": "off",
-      "unicorn/prefer-includes": "off"
+      "unicorn/no-this-assignment": "off"
     }
   },
   "remarkConfig": {
