--- a/package.json
+++ b/package.json
@@ -31,20 +31,28 @@
   "type": "module",
   "main": "index.js",
   "files": [
+    "dev/",
     "lib/",
     "index.js"
   ],
+  "exports": {
+    "development": "./dev/index.js",
+    "default": "./index.js"
+  },
   "dependencies": {
-    "micromark": "^3.0.0-alpha.2",
     "micromark-core-commonmark": "^1.0.0-alpha.2",
     "micromark-util-character": "^1.0.0-alpha.2",
     "micromark-util-events-to-acorn": "^1.0.0-alpha.1",
+    "micromark-util-symbol": "^1.0.0-alpha.2",
+    "unist-util-position-from-estree": "^1.1.0",
     "vfile-message": "^3.0.0"
   },
   "devDependencies": {
     "acorn": "^8.0.0",
     "acorn-jsx": "^5.0.0",
     "c8": "^7.0.0",
+    "micromark": "^3.0.0-alpha.2",
+    "micromark-build": "^1.0.0-alpha.1",
     "prettier": "^2.0.0",
     "remark-cli": "^9.0.0",
     "remark-preset-wooorm": "^8.0.0",
@@ -52,10 +60,11 @@
     "xo": "^0.39.0"
   },
   "scripts": {
+    "build": "micromark-build",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
     "test-api": "node --conditions development test/index.js",
     "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node --conditions development test/index.js",
-    "test": "npm run format && npm run test-coverage"
+    "test": "npm run build && npm run format && npm run test-coverage"
   },
   "prettier": {
     "tabWidth": 2,
