--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   "sideEffects": false,
   "type": "module",
   "main": "index.js",
+  "types": "index.d.ts",
   "files": [
     "dev/",
     "lib/",
+    "index.d.ts",
     "index.js"
   ],
   "exports": {
@@ -44,23 +46,29 @@
     "micromark-util-character": "^1.0.0-alpha.2",
     "micromark-util-events-to-acorn": "^1.0.0-alpha.1",
     "micromark-util-symbol": "^1.0.0-alpha.2",
+    "micromark-util-types": "^1.0.0-alpha.2",
     "unist-util-position-from-estree": "^1.1.0",
     "vfile-message": "^3.0.0"
   },
   "devDependencies": {
+    "@types/acorn": "^4.0.0",
+    "@types/tape": "^4.0.0",
     "acorn": "^8.0.0",
     "acorn-jsx": "^5.0.0",
     "c8": "^7.0.0",
     "micromark": "^3.0.0-alpha.2",
-    "micromark-build": "^1.0.0-alpha.1",
+    "micromark-build": "^1.0.0-alpha.2",
     "prettier": "^2.0.0",
     "remark-cli": "^9.0.0",
     "remark-preset-wooorm": "^8.0.0",
+    "rimraf": "^3.0.0",
     "tape": "^5.0.0",
+    "type-coverage": "^2.0.0",
+    "typescript": "^4.0.0",
     "xo": "^0.39.0"
   },
   "scripts": {
-    "build": "micromark-build",
+    "build": "rimraf \"dev/**/*.d.ts\" \"test/**/*.d.ts\" && tsc && type-coverage && micromark-build",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
     "test-api": "node --conditions development test/index.js",
     "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node --conditions development test/index.js",
@@ -84,5 +92,11 @@
     "plugins": [
       "preset-wooorm"
     ]
+  },
+  "typeCoverage": {
+    "atLeast": 100,
+    "detail": true,
+    "strict": true,
+    "ignoreCatch": true
   }
 }
