--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "tape": "^5.0.0",
     "type-coverage": "^2.0.0",
     "typescript": "^4.0.0",
-    "xo": "^0.45.0"
+    "xo": "^0.48.0"
   },
   "scripts": {
     "build": "rimraf \"dev/**/*.d.ts\" \"test/**/*.d.ts\" && tsc && type-coverage && micromark-build",
@@ -87,6 +87,7 @@
     "prettier": true,
     "rules": {
       "node/file-extension-in-import": "off",
+      "unicorn/prefer-code-point": "off",
       "unicorn/no-this-assignment": "off"
     }
   },
