--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "@types/acorn": "^4.0.0",
-    "@types/tape": "^4.0.0",
+    "@types/node": "^20.0.0",
     "acorn": "^8.0.0",
     "acorn-jsx": "^5.0.0",
     "c8": "^7.0.0",
@@ -62,7 +62,6 @@
     "prettier": "^2.0.0",
     "remark-cli": "^11.0.0",
     "remark-preset-wooorm": "^9.0.0",
-    "tape": "^5.0.0",
     "type-coverage": "^2.0.0",
     "typescript": "^5.0.0",
     "xo": "^0.54.0"
