Update types for changes in `micromark-util-types`

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "default": "./index.js"
   },
   "dependencies": {
+    "@types/estree": "^1.0.0",
     "micromark-core-commonmark": "^1.0.0",
     "micromark-util-character": "^1.0.0",
     "micromark-util-events-to-acorn": "^1.0.0",
