Refactor code-style

--- a/package.json
+++ b/package.json
@@ -101,6 +101,14 @@
     "rules": {
       "n/file-extension-in-import": "off",
       "unicorn/no-this-assignment": "off"
-    }
+    },
+    "overrides": [
+      {
+        "files": "test/**/*.js",
+        "rules": {
+          "no-await-in-loop": "off"
+        }
+      }
+    ]
   }
 }
