--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "exactOptionalPropertyTypes": true,
     "lib": ["es2020"],
     "module": "node16",
+    // Glob error :'(
+    "skipLibCheck": true,
     "strict": true,
     "target": "es2020"
   },
